# Ferrix

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE-APACHE  README.md  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: DownloadManager.tsx  Form.tsx  Item.tsx  StatusAndSpeed.tsx  download.form.tsx  globals.css  (+6 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/.sqlx/: query-0879aa7789015fa85ebcccc948c239eb3f72a5ab192abe29e9cabfad02ef89e9.json  query-08a6cfcae477e2991f13fbbd95a00718502845f44e83e381929fc74f40ceb605.json  query-0cf74d44fd2dd96ca89fd184f9ea7acfee9d4ac42170508ba07daaf8c75e0f8d.json  query-149e789b56222b5086da23d345767bd227259a3c67d83cdc64e4e5f9d5dff3f3.json  query-194e29ad93842ee0ceffc5864555a50476b5d0898ed5d4c4b16c5a95552fdf31.json  query-1a642f7d2077e64b76fc42b2baff53bfd20ccc73cf331fc4e1daa95b2f3a95d0.json  query-1bb7238c72529516f8c78a45747e933d001721ac434e63953f02c47e39af5ab0.json  query-1ce84acfd089afc9d99e205ff5ed0b03000a77d9514da875b39215d5ddbbc3f8.json  query-202d4ab7e7bc5e6e192c0e5a1f704c40ad01ddf787be2515d10599023bbec267.json  query-2821b9f289b331088f0effa2bb25f333dd1c90d0eae759d49c6f3a6ba09be50a.json  query-29befdfcb9077e726b1d36233f4276bb8ab3791f42d7afa91cb22da3ae200618.json  query-355cd927cadd7001aa856c4db6c372fe77cf53466fab483788134243f1961df2.json  query-3f30441bf6f2f294d9889620ce543df10bd92fb4a1290b0b3fe01a08e89eef63.json  query-463b4f41028c5cf8af9d42048f91e3e16a49378ce47c17cedded09457112e0a0.json  query-48745a927df00ce089e5191ba9a6d50a988ce786a06b1e6279cfb9687b4f4de0.json  query-5bd3c826135d5629dc8ba19cb5cb6b719e281b86e9d3f1f9054c6d8e89a36bdc.json  query-6276ad5b5b5509c8b193ebcca8eeb304c840cc5e6322bc7ff4f3d8979abfd69d.json  query-6c7bd8b9cae28701b48a725c715830834f7c08031e9e3b54294b9b853be1ae6e.json  query-8a195054f543b22c345a680c77f8afc0f157e6b53dbbfaa24a742e41bdae3fa1.json  query-90367e9baa4eb92eb01bb715f5ea8170bbaab1a5c4ffddc5e33e000aaa96a265.json  query-9076bfcdef2093214cd99903f17407e56e4b9016af41e961b6df3339811d7efd.json  query-9e342a736aec6caa7a18a65ec40b2ac56e31c2336703585ac93885665f94e304.json  query-9ea943583cfe55111e4288ab26ee66aa0f85a4c078ac04c81e7c9129982cc451.json  query-bb7247250edc0c6e43ce582fdafa5cadb31115d3b391bd7e09cb2d3a93c418a3.json  query-bbafe887e01797cdb83b7ac32b6d8a390c35951ebaca69b136a42212b49ceb9a.json  query-caa036634c50abdfc8a830a9b1155f99d770e14bcca9efc39cc720fb888d5c31.json  query-cc834dd006dd53c1b96cef93757249500fab7cb6b9ea68f049168044d8206a26.json  query-d62875079b8b7363da1bdeb01c6663603ba305e34dad53307f15a6b72525ea85.json  query-d8694f0f1acc85f205d6c84fa488a454090a4a53d0641475c4fb37920eef9b1d.json  query-dfa0a6be7b267827d27aeab3dbe316e314bd6fcd7ad4097fec3880461fbc5d0e.json  query-eaf58a62f4e1beae309efb184bf8073debee697dc697098febcfc74f38ff8d42.json  query-f0b8efcda1b8e34f4fdd84263a5020dcaa4e724ffa82d1a4bbb0374ee97f68ef.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_add_modified_at.sql  0002_expected_hash_chunk.sql  0003_error_message_chunk.sql  0004_download_options.sql
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/client/: auth.rs  builder.rs  cookies.rs  error.rs  headers.rs  inspect.rs  mod.rs  proxy.rs  stream.rs
src-tauri/src/command/: mod.rs  plugin.rs
src-tauri/src/command/download/: mod.rs
src-tauri/src/command/plugin/: http.rs
src-tauri/src/db/: downloads.rs  mod.rs
src-tauri/src/downloader/: file.rs  mod.rs  utils.rs  validate.rs
src-tauri/src/emitter/: mod.rs
src-tauri/src/file/: chunk.rs  disk.rs  mod.rs  path.rs  remove.rs  writer.rs
src-tauri/src/macros/: dispatch.rs  mod.rs  spawn.rs
src-tauri/src/manager/: actions.rs  bandwidth.rs  chunk.rs  compute_partial_hash.rs  download_worker.rs  downloads_manager.rs  event.rs  file_writer.rs  get_chunk_ranges.rs  mod.rs  monitor.rs  reporter.rs  reports.rs  repoter.rs  validation.rs
src-tauri/src/manager/bandwidth/: mod.rs  monitor.rs
src-tauri/src/manager/bandwidth_1/: monitor.rs
src-tauri/src/manager/task/: mod.rs
src-tauri/src/models/: chunk.rs  download.rs  mod.rs
src-tauri/src/registry/: actions.rs  chunk.rs  dispatch.rs  download.rs  event.rs  mod.rs  pool.rs  task.rs
src-tauri/src/registry/actions/: download.rs  events.rs  mod.rs  report.rs  system.rs
src-tauri/src/repository/: chunk.rs  download.rs  mod.rs
src-tauri/src/utils/: app_state.rs  broadcast_event.rs  event_handler.rs  mod.rs  path.rs
src-tauri/src/worker/: backoff.rs  bandwidth.rs  bandwidth_limiter.rs  chunk.rs  download.rs  file.rs  mod.rs  outcome.rs  reporter.rs  status.rs  validation.rs
(+160 files in other folders)
