[package]
name = "ferrix"
version = "0.1.0"
description = "Awesome Download Manager App"
authors = ["Mehran Taslimi"]
edition = "2021"

[profile.dev]
incremental = true

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "download_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = {version = "2", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "sqlite","chrono"] }
sqlformat = "0.3.5"
once_cell = "1.19.0"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10.6"
dirs-next = "2.0.0"
tokio-util = "0.7.15"
window-vibrancy = "0.6.0"
num_cpus = "1.17.0"

