[package]
name = "Ferrix"
version = "0.1.0"
description = "Awesome Download Manager App"
authors = ["Mehran Taslimi"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true


[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ferrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri-plugin-dialog = "2"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"
tauri-plugin-http = { version = "2.5.1", features = ["stream"] }
tokio = { version = "1.46.1", features = ["full"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
once_cell = "1.19.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7.15"
window-vibrancy = "0.6.0"
num_cpus = "1.17.0"
mime2ext = "0.1.54"
thiserror = "2.0.12"
dashmap = "6.1.0"
fs2 = "0.4.3"
cookie = "0.18.1"
log = "0.4"
env_logger = "0.11.8"
dotenvy = "0.15"
atomic_float = "1.0"
blake3 = "1.8.2"
anyhow = "1.0.98"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
